# PicoVela

./: .gitignore  Package.resolved  Package.swift  README.md
Sources/PicoVela/: CSVTable.swift  PicoVela.swift  PicoVelaDataLoader.swift  SpectralAnalysis.swift  WaveformAnalyzer.swift
Sources/PicoVelaPlot/: PlotCommand.swift  PlotDataBuilder.swift  PlotModels.swift  PlotView.swift  main.swift
Tests/PicoVelaTests/: PicoVelaTests.swift
pico-vela-data/: README.md  event_pipeline.py  pyproject.toml
pico-vela-data/examples/: nk2017_pipeline.py
pico-vela-data/src/picoveladata/: __init__.py  cli.py  convert.py  event_sets.py  fetch.py  pipeline.py  preprocess.py  stations.py
