[project]
name = "picoveladata"
version = "0.1.0"
description = "A tiny data preparation pipeline for PicoVela: downloads historical seismic waveform data and exports CSV files for Swift ingestion."
readme = "README.md"
authors = [
    { name = "copilot-swe-agent[bot]", email = "198982749+Copilot@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.5.1",
    "obspy>=1.5.0",
    "pandas>=3.0.3",
    "typer>=0.26.8",
]

[project.scripts]
picovela = "picoveladata.cli:app"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"
